@@ -19,19 +19,13 @@
  */
 package io.jenetics.jpx;
 
-import static java.util.Collections.emptyList;
-import static java.util.Collections.singletonList;
+import static java.time.ZoneOffset.UTC;
 import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
 
 import java.time.LocalDate;
-import java.time.ZonedDateTime;
-import java.util.Collections;
-import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -70,9 +64,9 @@ public final class Filters {
 	) {
 		final List<WayPoint> points = segments.stream()
 			.flatMap(TrackSegment::points)
-			.collect(Collectors.toList());
+			.toList();
 
-		return Collections.singletonList(TrackSegment.of(points));
+		return List.of(TrackSegment.of(points));
 	}
 
 	/**
@@ -94,11 +88,11 @@ public final class Filters {
 	public static List<Track> mergeTracks(final List<Track> tracks) {
 		final List<TrackSegment> segments = tracks.stream()
 			.flatMap(Track::segments)
-			.collect(Collectors.toList());
+			.toList();
 
 		return tracks.isEmpty()
-			? emptyList()
-			: singletonList(
+			? List.of()
+			: List.of(
 				tracks.get(0).toBuilder()
 					.segments(segments)
 					.build()
@@ -126,14 +120,14 @@ public final class Filters {
 		final List<WayPoint> points = tracks.stream()
 			.flatMap(Track::segments)
 			.flatMap(TrackSegment::points)
-			.collect(Collectors.toList());
+			.toList();
 
 		return tracks.isEmpty()
-			? emptyList()
-			: singletonList(
-					tracks.get(0).toBuilder()
-						.segments(singletonList(TrackSegment.of(points)))
-						.build()
+			? List.of()
+			: List.of(
+				tracks.get(0).toBuilder()
+					.segments(List.of(TrackSegment.of(points)))
+					.build()
 				);
 	}
 
@@ -175,7 +169,7 @@ public final class Filters {
 	public static List<Route> nonEmptyRoutes(final List<Route> routes) {
 		return routes.stream()
 			.filter(Route::nonEmpty)
-			.collect(toList());
+			.toList();
 	}
 
 	/**
@@ -191,7 +185,7 @@ public final class Filters {
 				.listMap(Filters::nonEmptySegments)
 				.build())
 			.filter(Track::nonEmpty)
-			.collect(toList());
+			.toList();
 	}
 
 	/**
@@ -206,7 +200,7 @@ public final class Filters {
 	) {
 		return segments.stream()
 			.filter(TrackSegment::nonEmpty)
-			.collect(toList());
+			.toList();
 	}
 
 	static List<Track> splitByDay(final Track track) {
@@ -216,7 +210,7 @@ public final class Filters {
 			.stream()
 			.map(TrackSegment::of)
 			.map(segment -> Track.builder().addSegment(segment).build())
-			.collect(toList());
+			.toList();
 	}
 
 	private static List<List<WayPoint>> splitWayPointsByDay(
@@ -224,19 +218,19 @@ public final class Filters {
 	) {
 		final Map<LocalDate, List<WayPoint>> parts = points
 			.collect(groupingBy(wp -> wp.getTime()
-				.map(ZonedDateTime::toLocalDate)
+				.map(i -> LocalDate.ofInstant(i, UTC))
 				.orElse(LocalDate.MIN)));
 
 		return parts.entrySet().stream()
-			.sorted(Comparator.comparing(Entry::getKey))
+			.sorted(Entry.comparingByKey())
 			.map(Entry::getValue)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	static List<TrackSegment> splitByDay(final TrackSegment segment) {
 		return splitWayPointsByDay(segment.points()).stream()
 			.map(TrackSegment::of)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 }
