@@ -20,17 +20,18 @@
 package io.jenetics.jpx;
 
 import static java.lang.String.format;
-import static java.util.Collections.singletonList;
+import static java.util.Objects.hash;
 import static java.util.Objects.requireNonNull;
-import static io.jenetics.jpx.Format.intString;
-import static io.jenetics.jpx.Lists.copy;
-import static io.jenetics.jpx.Lists.immutable;
+import static io.jenetics.jpx.Format.toIntString;
+import static io.jenetics.jpx.Lists.copyOf;
+import static io.jenetics.jpx.Lists.copyTo;
 
 import java.io.DataInput;
 import java.io.DataOutput;
 import java.io.IOException;
 import java.io.InvalidObjectException;
 import java.io.ObjectInputStream;
+import java.io.Serial;
 import java.io.Serializable;
 import java.net.URI;
 import java.util.ArrayList;
@@ -41,7 +42,6 @@ import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.w3c.dom.Document;
@@ -73,6 +73,7 @@ import io.jenetics.jpx.GPX.Version;
  */
 public final class Track implements Iterable<TrackSegment>, Serializable {
 
+	@Serial
 	private static final long serialVersionUID = 2L;
 
 	private final String _name;
@@ -117,11 +118,11 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 		_comment = comment;
 		_description = description;
 		_source = source;
-		_links = immutable(links);
+		_links = copyOf(links);
 		_number = number;
 		_type = type;
 		_extensions = extensions;
-		_segments = immutable(segments);
+		_segments = copyOf(segments);
 	}
 
 	/**
@@ -281,31 +282,30 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 
 	@Override
 	public int hashCode() {
-		int hash = 31;
-		hash += 17*Objects.hashCode(_name) + 37;
-		hash += 17*Objects.hashCode(_comment) + 37;
-		hash += 17*Objects.hashCode(_description) + 37;
-		hash += 17*Objects.hashCode(_source) + 37;
-		hash += 17*Objects.hashCode(_type) + 37;
-		hash += 17*Lists.hashCode(_links) + 37;
-		hash += 17*Objects.hashCode(_number) + 37;
-		hash += 17*Objects.hashCode(_segments) + 37;
-
-		return hash;
+		return hash(
+			_name,
+			_comment,
+			_description,
+			_source,
+			_type,
+			Lists.hashCode(_links),
+			_number,
+			_segments
+		);
 	}
 
 	@Override
 	public boolean equals(final Object obj) {
 		return obj == this ||
-			obj instanceof Track &&
-			Objects.equals(((Track)obj)._name, _name) &&
-			Objects.equals(((Track)obj)._comment, _comment) &&
-			Objects.equals(((Track)obj)._description, _description) &&
-			Objects.equals(((Track)obj)._source, _source) &&
-			Objects.equals(((Track)obj)._type, _type) &&
-			Lists.equals(((Track)obj)._links, _links) &&
-			Objects.equals(((Track)obj)._number, _number) &&
-			Objects.equals(((Track)obj)._segments, _segments);
+			obj instanceof Track track &&
+			Objects.equals(track._name, _name) &&
+			Objects.equals(track._comment, _comment) &&
+			Objects.equals(track._description, _description) &&
+			Objects.equals(track._source, _source) &&
+			Objects.equals(track._type, _type) &&
+			Lists.equals(track._links, _links) &&
+			Objects.equals(track._number, _number) &&
+			Objects.equals(track._segments, _segments);
 	}
 
 	@Override
@@ -436,7 +436,7 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 		 *         {@code null}
 		 */
 		public Builder links(final List<Link> links) {
-			copy(links, _links);
+			copyTo(links, _links);
 			return this;
 		}
 
@@ -574,7 +574,7 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 		 *         {@code null}
 		 */
 		public Builder segments(final List<TrackSegment> segments) {
-			copy(segments, _segments);
+			copyTo(segments, _segments);
 			return this;
 		}
 
@@ -587,7 +587,6 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 		 */
 		public Builder addSegment(final TrackSegment segment) {
 			_segments.add(requireNonNull(segment));
-
 			return this;
 		}
 
@@ -612,7 +611,7 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 		 * @return {@code this} {@code Builder} for method chaining
 		 * @throws NullPointerException if the given argument is {@code null}
 		 */
-		public Builder addSegment(final Consumer<TrackSegment.Builder> segment) {
+		public Builder addSegment(final Consumer<? super TrackSegment.Builder> segment) {
 			final TrackSegment.Builder builder = TrackSegment.builder();
 			segment.accept(builder);
 			return addSegment(builder.build());
@@ -632,12 +631,7 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 
 		@Override
 		public Builder filter(final Predicate<? super TrackSegment> predicate) {
-			segments(
-				_segments.stream()
-					.filter(predicate)
-					.collect(Collectors.toList())
-			);
-
+			segments(_segments.stream().filter(predicate).toList());
 			return this;
 		}
 
@@ -648,9 +642,9 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 			segments(
 				_segments.stream()
 					.map(mapper)
-					.collect(Collectors.toList())
+					.map(TrackSegment.class::cast)
+					.toList()
 			);
-
 			return this;
 		}
 
@@ -663,9 +657,8 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 			segments(
 				_segments.stream()
 					.flatMap(segment -> mapper.apply(segment).stream())
-					.collect(Collectors.toList())
+					.toList()
 			);
-
 			return this;
 		}
 
@@ -676,7 +669,6 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 				? extends List<TrackSegment>> mapper
 		) {
 			segments(mapper.apply(_segments));
-
 			return this;
 		}
 
@@ -803,10 +795,12 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 	 *  Java object serialization
 	 * ************************************************************************/
 
+	@Serial
 	private Object writeReplace() {
-		return new Serial(Serial.TRACK, this);
+		return new SerialProxy(SerialProxy.TRACK, this);
 	}
 
+	@Serial
 	private void readObject(final ObjectInputStream stream)
 		throws InvalidObjectException
 	{
@@ -856,45 +850,56 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 	}
 
 	// Define the needed writers for the different versions.
-	private static final XMLWriters<Track> WRITERS = new XMLWriters<Track>()
-		.v00(XMLWriter.elem("name").map(t -> t._name))
-		.v00(XMLWriter.elem("cmt").map(r -> r._comment))
-		.v00(XMLWriter.elem("desc").map(r -> r._description))
-		.v00(XMLWriter.elem("src").map(r -> r._source))
-		.v11(XMLWriter.elems(Link.WRITER).map(r -> r._links))
-		.v10(XMLWriter.elem("url").map(Track::url))
-		.v10(XMLWriter.elem("urlname").map(Track::urlname))
-		.v00(XMLWriter.elem("number").map(r -> intString(r._number)))
-		.v00(XMLWriter.elem("type").map(r -> r._type))
-		.v00(XMLWriter.doc("extensions").map(gpx -> gpx._extensions))
-		.v10(XMLWriter.elems(TrackSegment.xmlWriter(Version.V10)).map(r -> r._segments))
-		.v11(XMLWriter.elems(TrackSegment.xmlWriter(Version.V11)).map(r -> r._segments));
-
-	// Define the needed readers for the different versions.
-	private static final XMLReaders READERS = new XMLReaders()
-		.v00(XMLReader.elem("name"))
-		.v00(XMLReader.elem("cmt"))
-		.v00(XMLReader.elem("desc"))
-		.v00(XMLReader.elem("src"))
-		.v11(XMLReader.elems(Link.READER))
-		.v10(XMLReader.elem("url").map(Format::parseURI))
-		.v10(XMLReader.elem("urlname"))
-		.v00(XMLReader.elem("number").map(UInt::parse))
-		.v00(XMLReader.elem("type"))
-		.v00(XMLReader.doc("extensions"))
-		.v10(XMLReader.elems(TrackSegment.xmlReader(Version.V10)))
-		.v11(XMLReader.elems(TrackSegment.xmlReader(Version.V11)));
-
-	static XMLWriter<Track> xmlWriter(final Version version) {
-		return XMLWriter.elem("trk", WRITERS.writers(version));
+	private static XMLWriters<Track>
+	writers(final Function<? super Number, String> formatter) {
+		return new XMLWriters<Track>()
+			.v00(XMLWriter.elem("name").map(t -> t._name))
+			.v00(XMLWriter.elem("cmt").map(r -> r._comment))
+			.v00(XMLWriter.elem("desc").map(r -> r._description))
+			.v00(XMLWriter.elem("src").map(r -> r._source))
+			.v11(XMLWriter.elems(Link.WRITER).map(r -> r._links))
+			.v10(XMLWriter.elem("url").map(Track::url))
+			.v10(XMLWriter.elem("urlname").map(Track::urlname))
+			.v00(XMLWriter.elem("number").map(r -> toIntString(r._number)))
+			.v00(XMLWriter.elem("type").map(r -> r._type))
+			.v00(XMLWriter.doc("extensions").map(gpx -> gpx._extensions))
+			.v10(XMLWriter.elems(TrackSegment.xmlWriter(Version.V10, formatter)).map(r -> r._segments))
+			.v11(XMLWriter.elems(TrackSegment.xmlWriter(Version.V11, formatter)).map(r -> r._segments));
 	}
 
-	@SuppressWarnings("unchecked")
-	static XMLReader<Track> xmlReader(final Version version) {
+	// Define the needed readers for the different versions.
+	private static XMLReaders
+	readers(final Function<? super String, Length> lengthParser) {
+		return new XMLReaders()
+			.v00(XMLReader.elem("name"))
+			.v00(XMLReader.elem("cmt"))
+			.v00(XMLReader.elem("desc"))
+			.v00(XMLReader.elem("src"))
+			.v11(XMLReader.elems(Link.READER))
+			.v10(XMLReader.elem("url").map(Format::parseURI))
+			.v10(XMLReader.elem("urlname"))
+			.v00(XMLReader.elem("number").map(UInt::parse))
+			.v00(XMLReader.elem("type"))
+			.v00(XMLReader.doc("extensions"))
+			.v10(XMLReader.elems(TrackSegment.xmlReader(Version.V10, lengthParser)))
+			.v11(XMLReader.elems(TrackSegment.xmlReader(Version.V11, lengthParser)));
+	}
+
+	static XMLWriter<Track> xmlWriter(
+		final Version version,
+		final Function<? super Number, String> formatter
+	) {
+		return XMLWriter.elem("trk", writers(formatter).writers(version));
+	}
+
+	static XMLReader<Track> xmlReader(
+		final Version version,
+		final Function<? super String, Length> lengthParser
+	) {
 		return XMLReader.elem(
 			version == Version.V10 ? Track::toTrackV10 : Track::toTrackV11,
 			"trk",
-			READERS.readers(version)
+			readers(lengthParser).readers(version)
 		);
 	}
 
@@ -921,7 +926,7 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 			(String)v[2],
 			(String)v[3],
 			v[4] != null
-				? singletonList(Link.of((URI)v[4], (String)v[5], null))
+				? List.of(Link.of((URI)v[4], (String)v[5], null))
 				: null,
 			(UInt)v[6],
 			(String)v[7],
